# tjsandbox

./: README.md
taxbot/: .gitignore  README.md  config.tpl.yml  pyproject.toml
taxbot/taxbot/: __main__.py
tjbots/: .Rbuildignore  .gitignore  DESCRIPTION  README.Rmd  README.md
tjbots.R/: .Rbuildignore  DESCRIPTION
tjbots.R/R/: tjbots-package.R
tjbots.R/inst/prompts/: prompt-extract-jtwc.md
tjbots.R/notebooks/: jtwc.qmd
